--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -5,14 +5,16 @@
     android:padding="6dip" >
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/menu_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
-        android:src="@mipmap/ic_launcher" />
+        android:adjustViewBounds="true"
+        android:src="@drawable/menu1"
+        />
 
     <TextView
         android:id="@+id/menu_item_second_line"
@@ -20,7 +22,7 @@
         android:layout_height="26dip"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/icon"
+        android:layout_toRightOf="@id/menu_item_icon"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="Description"
@@ -34,7 +36,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
-        android:layout_toRightOf="@id/icon"
+        android:layout_toRightOf="@id/menu_item_icon"
         android:gravity="center_vertical"
         android:text="Example application"
         android:textSize="16sp" />
