--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -8,10 +8,9 @@
         android:id="@+id/menu_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
-        android:contentDescription="TODO"
+        android:layout_marginEnd="6dip"
+        android:contentDescription="@string/menu_item_icon_description"
         android:adjustViewBounds="true"
         android:src="@drawable/menu1"
         />
@@ -19,13 +18,13 @@
     <TextView
         android:id="@+id/menu_item_second_line"
         android:layout_width="fill_parent"
-        android:layout_height="26dip"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_toRightOf="@id/menu_item_icon"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:text="Description"
+        android:layout_toEndOf="@id/menu_item_icon"
+        android:text="@string/menu_item_description_placeholder"
         android:textSize="12sp" />
 
     <TextView
@@ -34,11 +33,12 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/menu_item_second_line"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_toRightOf="@id/menu_item_icon"
-        android:gravity="center_vertical"
-        android:text="Example application"
+        android:layout_toEndOf="@id/menu_item_icon"
+        android:text="@string/menu_item_title_placeholder"
         android:textSize="16sp" />
 
 </RelativeLayout>
